--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,5 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
-/environments
+/environments/environment.development.ts
+/environments/environment.ts
